[package]
name = "tiny_ai_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.6"  # Check for the latest version on crates.io
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }